--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 <head>
-<title> Amit Mishra </title>
+<title> INTELLIPAAT </title>
 </head>
 <body style = "background-image:url('images/github3.jpg'); background-size: 100%">
 <h2 ALIGN=CENTER>Hello world!</h2>
-<h2 ALIGN=LEFT>This is first line</h2>
+<h2 ALIGN=CENTER>This is first line</h2>
+<h2 ALIGN=CENTER>This is 2nd line</h2>
 </body>
 </html>
